# Rust-agents

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  COMPLIANCE_CHECKLIST.md  Cargo.toml  DETAILED_REPORT.md  ENGINEERING_CHECKLIST.md  EXECUTIVE_SUMMARY.md  QUARTERLY_ROADMAP.md  README.md  RISK_REGISTER.md  ROADMAP.md  RUNBOOK.md  config.toml.example  docker-compose.yml  otel-collector-config.yml
src/: agent.rs  config.rs  executor.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  planner.rs  supervisor.rs  tools.rs
src/tools/: code_writer.rs  directory_lister.rs  file_reader.rs  mod.rs  system.rs  web_scraper.rs
tests/: agent_test.rs  tools_test.rs
