[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.8", features = ["derive"] }
config = "0.14.0"
scraper = "0.19.0"
